// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.

syntax = "proto3";

package foundation.runtime.kubernetes.kubedef;

option go_package = "namespacelabs.dev/foundation/framework/kubernetes/kubedef";

message ContainerPodReference {
    string namespace = 1;
    string pod_name  = 2;
    string container = 3;
}