// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the EARLY ACCESS SOFTWARE LICENSE AGREEMENT
// available at http://github.com/namespacelabs/foundation

syntax = "proto3";

package foundation.schema;

option go_package = "namespacelabs.dev/foundation/schema";

import "schema/definition.proto";
import "schema/serialized.proto";
import "schema/runtime.proto";
import "google/protobuf/timestamp.proto";

message TestResult {
    bool success = 1;

    foundation.schema.DeployPlan             plan                    = 2;
    foundation.schema.ComputedConfigurations computed_configurations = 3;
}

message TestBundle {
    google.protobuf.Timestamp created   = 4;
    google.protobuf.Timestamp completed = 5;  // Regardless of success or failure.

    TestResult      result     = 1;
    LogRef          test_log   = 2;
    repeated LogRef server_log = 3;
}

message LogRef {
    string        package_name   = 1;
    string        container_name = 2;
    ContainerKind container_kind = 4;
    string        log_file       = 3;
    uint64        log_size       = 5;
}